test_programs/compile_failure/noirc_frontend_tests_cannot_determine_type_of_generic_argument_in_function_call_for_generic_impl/src/main.nr

    pub struct Foo<T> {}

    impl<T> Foo<T> {
        fn one() {}
    }
    
    fn main() {
        Foo::one();
    }
    